--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-
-<app-products></app-products>
+<nav class="navbar navbar-expand navbar-light bg-light">
+    <a class="navbar-brand">{{pageTitle}}</a>
+    <ul class="nav nav-pills">
+        <li><a class="nav-link" [routerLink]="['/welcome']">Home</a></li>
+        <li><a class="nav-link" [routerLink]="['/listComponent']">Products</a></li>
+    </ul>
+</nav>
+<router-outlet></router-outlet>
